[package]
name = "terra"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
